# proto-interactions-api

./: .gitignore  GOOGLE_INTERACTIONS_API_FINDINGS.md  IMPL_STATUS.md  PLAYGROUND_STATUS.md  README.md  interactions_api_overview.md  interactions_playground.exs  pyproject.toml
docs/interactions_api_overview/: 01_single_interaction_flow.d2  02_tool_calls_loop.d2  03_multimodal_inputs_outputs.d2  04_concurrency_and_forking.d2
elixir_docs/: AUTH_SETUP.md  Ash, Phoenix, Python Integration.md  DOCS_DSPy-Elixir-Integration-Best-Practices.md  DOCS_Elixir-Multi-User-Session-Deep-Dive.md  DOCS_Snapshot-Testing-in-Elixir-Phoenix-LiveView.md  KNOWHOW_tech_stack.md  LEARNINGS_liveview_during_implementation.md  liveview_example.md  liveview_guides.md
playground/: Elixir_Phoenix_Liveview_minimal.md  config.ex  controllers.ex  endpoint.ex  errors.ex  interactions_client.ex  layout.ex  live.ex  router.ex  run.exs  sse.ex  sw_plug.ex
playground_mix/: mix.exs  precommit.sh
playground_mix/config/: config.exs  dev.exs  prod.exs  test.exs
playground_mix/lib/interactions_playground/: application.ex  config.ex  controllers.ex  endpoint.ex  errors.ex  interactions_client.ex  layout.ex  live.ex  port.ex  router.ex  sse.ex  sw_plug.ex
web_demo/: __main__.py  app.py
web_demo/static/: index.html
