[project]
name = "proto-interactions-api"
version = "0.1.0"
description = "Minimal local web demo for the Gemini Interactions API (streaming events)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.1",
  "httpx-sse>=0.4.0",
  "starlette>=0.47.0",
  "uvicorn[standard]>=0.35.0",
]
